<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/azul_cielo">

    <TextView
        android:id="@+id/textView"
        style="@style/titulos_secundarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/TituloApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/areaBotones"
        android:layout_width="315dp"
        android:layout_height="341dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textDirection="locale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.846">

        <Button
            android:id="@+id/btnPersonas"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btoPersonas" />

        <Button
            android:id="@+id/btnDeudas"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btnDeudas" />

        <Button
            android:id="@+id/btnSalir"
            style="@style/estilo_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="407dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icono_titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>
